--- a/index.html
+++ b/index.html
@@ -296,68 +296,71 @@
         const sendButton = document.getElementById('send-button');
         const chatBox = document.getElementById('chat-box');
 
-        const API_KEY = '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'; // Replace with your actual API key securely
+const API_KEY = 'your-together-ai-api-key'; // Replace with your actual Together AI API key
 
-        async function sendMessage() {
-            const message = input.value.trim();
-            if (!message) return;
+async function sendMessage() {
+    const message = input.value.trim();
+    if (!message) return;
 
-            // Display user message
-            const messageElement = document.createElement('div');
-            messageElement.className = 'chat-message outgoing';
-            messageElement.textContent = message;
-            chatBox.appendChild(messageElement);
-            input.value = '';
-            chatBox.scrollTop = chatBox.scrollHeight;
+    // Display user message
+    const messageElement = document.createElement('div');
+    messageElement.className = 'chat-message outgoing';
+    messageElement.textContent = message;
+    chatBox.appendChild(messageElement);
+    input.value = '';
+    chatBox.scrollTop = chatBox.scrollHeight;
 
-            // Show loading indicator
-            const loadingElement = document.createElement('div');
-            loadingElement.className = 'chat-message incoming';
-            loadingElement.textContent = 'Thinking...';
-            chatBox.appendChild(loadingElement);
-            chatBox.scrollTop = chatBox.scrollHeight;
+    // Show loading indicator
+    const loadingElement = document.createElement('div');
+    loadingElement.className = 'chat-message incoming';
+    loadingElement.textContent = 'Thinking...';
+    chatBox.appendChild(loadingElement);
+    chatBox.scrollTop = chatBox.scrollHeight;
 
-            try {
-                const response = await fetch("https://api.openai.com/v1/chat/completions", {
-                    method: "POST",
-                    headers: {
-                        "Content-Type": "application/json",
-                        "Authorization": `Bearer ${API_KEY}`
-                    },
-                    body: JSON.stringify({
-                        model: "gpt-3.5-turbo", // or "gpt-4"
-                        messages: [{ role: "system", content: "You are an AI that only answers questions about chemistry, biology, and basic inquiries." },
-                                   { role: "user", content: message }]
-                    })
-                });
+    try {
+        const response = await fetch("https://api.together.xyz/v1/chat/completions", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "Authorization": `Bearer ${API_KEY}`
+            },
+            body: JSON.stringify({
+                model: "mistral-7b",
+                messages: [
+                    { role: "system", content: "You are an AI that only answers questions about chemistry, biology, and basic inquiries." },
+                    { role: "user", content: message }
+                ],
+                max_tokens: 200
+            })
+        });
 
-                const data = await response.json();
-                const aiResponse = data.choices[0].message.content || "Sorry, I couldn't process that.";
+        const data = await response.json();
+        const aiResponse = data.choices?.[0]?.message?.content || "Sorry, I couldn't process that.";
 
-                // Remove loading indicator and show AI response
-                chatBox.removeChild(loadingElement);
-                const responseElement = document.createElement('div');
-                responseElement.className = 'chat-message incoming';
+        // Remove loading indicator and show AI response
+        chatBox.removeChild(loadingElement);
+        const responseElement = document.createElement('div');
+        responseElement.className = 'chat-message incoming';
 
-                // Create robot emoji element
-                const robotEmoji = document.createElement('div');
-                robotEmoji.className = 'robot-emoji';
-                robotEmoji.textContent = '🤖'; // Robot emoji
+        // Create robot emoji element
+        const robotEmoji = document.createElement('div');
+        robotEmoji.className = 'robot-emoji';
+        robotEmoji.textContent = '🤖';
 
-                responseElement.appendChild(robotEmoji); // Append emoji to the response element
-                responseElement.appendChild(document.createTextNode(aiResponse)); // Append AI response text
-                chatBox.appendChild(responseElement);
-                chatBox.scrollTop = chatBox.scrollHeight;
-            } catch (error) {
-                console.error("Error:", error);
-                chatBox.removeChild(loadingElement);
-                const errorElement = document.createElement('div');
-                errorElement.className = 'chat-message incoming';
-                errorElement.textContent = "Oops! Something went wrong.";
-                chatBox.appendChild(errorElement);
-                chatBox.scrollTop = chatBox.scrollHeight;
-            }
-        }
+        responseElement.appendChild(robotEmoji);
+        responseElement.appendChild(document.createTextNode(aiResponse));
+        chatBox.appendChild(responseElement);
+        chatBox.scrollTop = chatBox.scrollHeight;
+    } catch (error) {
+        console.error("Error:", error);
+        chatBox.removeChild(loadingElement);
+        const errorElement = document.createElement('div');
+        errorElement.className = 'chat-message incoming';
+        errorElement.textContent = "Oops! Something went wrong.";
+        chatBox.appendChild(errorElement);
+        chatBox.scrollTop = chatBox.scrollHeight;
+    }
+}
 
         sendButton.addEventListener('click', sendMessage);
         input.addEventListener('keypress', function(event) {
