--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         const sendButton = document.getElementById('send-button');
         const chatBox = document.getElementById('chat-box');
 
-const API_KEY = 'your-together-ai-api-key'; // Replace with your actual Together AI API key
+const API_KEY = 'd0632dc0576248182ee4b367a0ef429c5de2794d2427ab93b84f94f06260d1cf'
 
 async function sendMessage() {
     const message = input.value.trim();
