--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
             <div class="dropdown" role="menu">
                 <span class="menu-text" role="button" aria-haspopup="true" aria-expanded="false">Menu</span>
                 <div class="dropdown-content" role="menuitem" aria-hidden="true">
-                    <a href="/">Home</a>
+                    <a href="index.html" id="home-link" aria-current="page">Home</a>
                     <a href="/about">About</a>
                 </div>
             </div>
