--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
                 <span class="menu-text" role="button" aria-haspopup="true" aria-expanded="false">Menu</span>
                 <div class="dropdown-content" role="menuitem" aria-hidden="true">
                     <a href="index.html" id="home-link" aria-current="page">Home</a>
-                    <a href="/about">About</a>
+                    <a href="about.html" aria-label="About page">About</a>
                 </div>
             </div>
         </div>
