--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         const sendButton = document.getElementById('send-button');
         const chatBox = document.getElementById('chat-box');
 
-const API_KEY = 'd0632dc0576248182ee4b367a0ef429c5de2794d2427ab93b84f94f06260d1cf'
+const API_KEY = "AIzaSyA3wMZZHpMwuF0iFgEQ0P7V2RbQ3Xk19zg"; // Your Google Gemini API key
 
 async function sendMessage() {
     const message = input.value.trim();
@@ -318,24 +318,20 @@ async function sendMessage() {
     chatBox.scrollTop = chatBox.scrollHeight;
 
     try {
-        const response = await fetch("https://api.together.xyz/v1/chat/completions", {
+        const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.0-pro:generateContent?key=${API_KEY}`, {
             method: "POST",
             headers: {
-                "Content-Type": "application/json",
-                "Authorization": `Bearer ${API_KEY}`
+                "Content-Type": "application/json"
             },
             body: JSON.stringify({
-                model: "mistral-7b",
-                messages: [
-                    { role: "system", content: "You are an AI that only answers questions about chemistry, biology, and basic inquiries." },
-                    { role: "user", content: message }
-                ],
-                max_tokens: 200
+                contents: [
+                    { role: "user", parts: [{ text: message }] }
+                ]
             })
         });
 
         const data = await response.json();
-        const aiResponse = data.choices?.[0]?.message?.content || "Sorry, I couldn't process that.";
+        const aiResponse = data.candidates?.[0]?.content?.parts?.[0]?.text || "Sorry, I couldn't process that.";
 
         // Remove loading indicator and show AI response
         chatBox.removeChild(loadingElement);
