--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
 </head>
 <body>
     <div class="navbar">
-        <img src="Kauno-Zaliakalnio-progimnazija_logo-e1679002355734-300x300.jpg" alt="Kauno Žaliakalnio Progimnazija Logo">
+        <img src="Kauno-Zaliakalnio-progimnazija_logo-e1679002355734-300x300.jpg" alt="Logo">
         <h1 class="navbar-title">SūdžiusAI</h1>
         <div class="menu-container">
             <div class="dropdown" role="menu">
