--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         const sendButton = document.getElementById('send-button');
         const chatBox = document.getElementById('chat-box');
 
-const API_KEY = "AIzaSyA3wMZZHpMwuF0iFgEQ0P7V2RbQ3Xk19zg"; // Your Google Gemini API key
+const API_KEY = "TS_PMO_SYBAU"; // Your Google Gemini API key
 
 async function sendMessage() {
     const message = input.value.trim();
