--- a/about.html
+++ b/about.html
@@ -133,6 +133,7 @@
                 <div class="dropdown-content" role="menuitem" aria-hidden="true">
                     <a href="index.html" id="home-link" aria-current="page">Home</a>
                     <a href="about.html" aria-label="About page">About</a>
+                    <a href="Login.html" aria-label="Log In page">Log In</a>
                 </div>
             </div>
         </div>
