--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         const sendButton = document.getElementById('send-button');
         const chatBox = document.getElementById('chat-box');
 
-const API_KEY = "TS_PMO_SYBAU"; // Your Google Gemini API key
+const API_KEY = "AIzaSyA3wMZZHpMwuF0iFgEQ0P7V2RbQ3Xk19zg"; // Your Google Gemini API key
 
 async function sendMessage() {
     const message = input.value.trim();
@@ -320,7 +320,7 @@ async function sendMessage() {
     chatBox.scrollTop = chatBox.scrollHeight;
 
     try {
-        const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.0-pro:generateContent?key=${API_KEY}`, {
+        const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.0-pro:generateContent?key=${AIzaSyA3wMZZHpMwuF0iFgEQ0P7V2RbQ3Xk19zg}`, {
             method: "POST",
             headers: {
                 "Content-Type": "application/json"
