--- a/about.html
+++ b/about.html
@@ -141,11 +141,9 @@
 
     <main>
         <h1>Apie SūdžiusAI</h1>
-        <h2>Susipažinkite su SūdžiusAI!</h2>
         <p>SūdžiusAI yra svetainė, sukurta vieno žmogaus nepriklausomai kažko.</p>
-        <p>Galima naudoti bet kam, mes esame neutralūs šio įrankio vartojimui sukčiavimo tikslams, tik neprisiimame kaltės.</p>
-        <p>Prašome neatskleisti šio įrankio KŽP darbuotojams, nes man gali būti pyze.</p>
-        <p>Jei norite padėti, tai galite padaryti repo and Githubo.</p>
+        <p>Logiška, kad bus naudojama cheatinti, tai tsg daugiau koduosiu, kad galima būtų cheatinti.</p>
+        <p>Gal net sukursiu bendrą mokyklos versiją</p>
     </main>
 
     <script>
