--- a/index.html
+++ b/index.html
@@ -370,9 +370,9 @@
                 </div>
                 <div class="dropdown-content" aria-hidden="true">
                     <ul>
-                        <li><a href="index.html" id="home-link" aria-current="page">Home</a></li>
-                        <li><a href="about.html" aria-label="About page">About</a></li>
-                        <li><a href="Login.html" aria-label="Log In page">Log In</a></li>
+                        <li><a href="index.html" id="home-link" aria-current="page">Pagrindinis</a></li>
+                        <li><a href="about.html" aria-label="About page">Apie</a></li>
+                        <li><a href="Login.html" aria-label="Log In page">Prisijungti</a></li>
                     </ul>
                 </div>
             </div>
