--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 <div class="chat-box" id="chat-box" aria-live="assertive" aria-label="Chat messages"></div>
                 <div class="input-container">
                     <input type="text" id="message-input" placeholder="Pradėk pokalbį su SūdžiusAI" aria-label="Message input" maxlength="200">
-                    <button id="send-button" aria-label="Išsiųsk žinutę" role="button">Send</button>
+                    <button id="send-button" aria-label="send message" role="button">Išsiųsk žinutę</button>
                 </div>
             </div>
 
