--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                 <input type="checkbox" id="toggle" class="toggle-switch" aria-hidden="true">
                 <label for="toggle" class="switch">
                     <div class="fill"></div>
-                    <span class="toggle-label">🌙</span> <!-- Added moon icon -->
+                    <span class="toggle-label"></span> <!-- Removed the moon icon -->
                 </label>
             </div>
         </main>
