--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
             <span class="navbar-title">SūdžiusAI</span>
             <div class="menu-container">
                 <div class="menu-button" tabindex="0" aria-haspopup="true" aria-expanded="false" role="button">
-                    <span class="menu-text" aria-label="Menu">Meniu</span>
+                    <span class="menu-text" aria-label="Menu">Menu</span>
                 </div>
                 <div class="dropdown-content" aria-hidden="true">
                     <ul>
@@ -380,8 +380,8 @@
             <div class="chat-wrapper">
                 <div class="chat-box" id="chat-box" aria-live="assertive" aria-label="Chat messages"></div>
                 <div class="input-container">
-                    <input type="text" id="message-input" placeholder="Pradėk pokalbį su SūdžiusAI" aria-label="Message input" maxlength="200">
-                    <button id="send-button" aria-label="send message" role="button">Išsiųsk žinutę</button>
+                    <input type="text" id="message-input" placeholder="Ask me anything!" aria-label="Message input" maxlength="200">
+                    <button id="send-button" aria-label="send message" role="button">Send Message</button>
                 </div>
             </div>
 
