--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 <div class="chat-box" id="chat-box" aria-live="assertive" aria-label="Chat messages"></div>
                 <div class="input-container">
                     <input type="text" id="message-input" placeholder="Ask me anything!" aria-label="Message input" maxlength="200">
-                    <button id="send-button" aria-label="send message" role="button">Send Message</button>
+                    <button id="send-button" aria-label="send message" role="button">Send</button>
                 </div>
             </div>
 
