--- a/signup.html
+++ b/signup.html
@@ -234,17 +234,28 @@
             animation: spin 2s linear infinite; /* Animation for spinning effect */
         }
 
-        /* Animation Keyframes */
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+ /* Loading Screen Styles */
+        .loading-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent background */
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999; /* Ensure it covers the entire screen */
         }
 
-        /* Text Styles */
-        .loading-screen p {
-            margin-top: 20px;
-            font-size: 1.5em;
-            color: #333; /* Dark text color */
+        .loader {
+            width: 100px;
+            height: 100px;
+            border: 16px solid #f3f3f3; /* Light grey */
+            border-top: 16px solid #3498db; /* Blue */
+            border-radius: 50%;
+            animation: spin 1s linear infinite; /* Animation for spinning effect */
         }
 
         /* Dark Mode Toggle Styles */
@@ -340,7 +351,6 @@
             <input type="checkbox" id="toggle" class="toggle-switch" aria-hidden="true">
             <label for="toggle" class="switch">
                 <div class="fill"></div>
-                <span class="toggle-label">🌙</span> <!-- Moon icon for dark mode -->
             </label>
         </div>
     </main>
