--- a/signup.html
+++ b/signup.html
@@ -231,31 +231,13 @@
             border: 16px solid #f3f3f3; /* Light grey */
             border-top: 16px solid #3498db; /* Blue */
             border-radius: 50%;
-            animation: spin 2s linear infinite; /* Animation for spinning effect */
-        }
-
- /* Loading Screen Styles */
-        .loading-screen {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent background */
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            z-index: 9999; /* Ensure it covers the entire screen */
-        }
-
-        .loader {
-            width: 100px;
-            height: 100px;
-            border: 16px solid #f3f3f3; /* Light grey */
-            border-top: 16px solid #3498db; /* Blue */
-            border-radius: 50%;
             animation: spin 1s linear infinite; /* Animation for spinning effect */
+        }
+
+        /* Keyframes for spinning animation */
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
 
         /* Dark Mode Toggle Styles */
