--- a/signup.html
+++ b/signup.html
@@ -342,8 +342,8 @@
         window.onload = function() {
             setTimeout(function() {
                 document.querySelector('.loading-screen').style.display = 'none'; // Hide loading screen
-                document.querySelector('main').style.display = 'block'; // Show main content
-            }, 2000); // Loading time set to 2 seconds
+                document.querySelector('.content').style.display = 'block'; // Show main content
+            }, 2000); // Adjusted time to 1 second
         };
 
         // Dark mode toggle functionality
