--- a/signup.html
+++ b/signup.html
@@ -338,6 +338,7 @@
     </main>
 
     <script>
+    <script>    
         // Simulate loading time
         window.onload = function() {
             setTimeout(function() {
