--- a/Login.html
+++ b/Login.html
@@ -189,25 +189,65 @@
             box-sizing: border-box; /* Ensure padding is included in width */
         }
 
-        button {
-            margin-top: 15px;
-            background-color: var(--primary-color);
-            color: white;
-            border: none;
-            border-radius: var(--border-radius);
-            padding: 10px 15px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s;
+        /* Dropdown styles */
+        .menu-container {
+            display: flex;
+            align-items: center;
+            position: relative;
         }
 
-        button:hover {
-            background-color: var(--hover-color);
+        .menu-button {
+            cursor: pointer; 
+            transition: opacity 0.2s ease; 
+            outline: none; /* Remove outline */
         }
 
-        input:focus,
-        button:focus {
-            outline: 2px solid var(--primary-color);
+        .dropdown-content {
+            display: none; 
+            position: absolute; 
+            background-color: var(--dropdown-background); 
+            min-width: 160px; 
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 1; 
+            border-radius: 8px; 
+            overflow: hidden;
+            left: 50%;
+            transform: translateX(-50%);
+            top: 100%;
+            opacity: 0; 
+            visibility: hidden; 
+            transition: opacity 0.2s ease, visibility 0.2s ease; 
+        }
+
+        .dropdown-content ul {
+            list-style-type: none; 
+            padding: 0; 
+            margin: 0; 
+        }
+
+        .dropdown-content a {
+            color: var(--dropdown-item-color);
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            transition: background-color 0.3s, transform 0.2s;
+        }
+
+        .dropdown-content a:hover {
+            background-color: var(--dropdown-item-hover);
+            transform: scale(1.05);
+        }
+
+        /* Show dropdown on hover and fade effects */
+        .menu-container:hover .dropdown-content,
+        .menu-button:focus + .dropdown-content {
+            display: block;
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .menu-container:hover .menu-button {
+            opacity: 0; 
         }
 
         .register-here {
