--- a/index.html
+++ b/index.html
@@ -438,17 +438,18 @@
             chatBox.scrollTop = chatBox.scrollHeight;
 
             try {
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.0-pro:generateContent?key=${API_KEY}`, {
-                    method: "POST",
-                    headers: {
-                        "Content-Type": "application/json"
-                    },
-                    body: JSON.stringify({
-                        contents: [
-                            { role: "user", parts: [{ text: message }] }
-                        ]
-                    })
-                });
+                const response = await fetch("https://152a1aea-42ed-4a2a-91aa-1baf5004ffee-00-cd6guwqubgyw.riker.replit.dev/api/generate", {
+    method: "POST",
+    headers: {
+        "Content-Type": "application/json"
+    },
+    body: JSON.stringify({
+        prompt: message,
+        model: "gemini-pro",      // Optional: defaults to "gemini-pro"
+        temperature: 0.7,         // Optional
+        max_tokens: 200           // Optional
+    })
+});
 
                 if (!response.ok) {
                     const errorMessage = await response.text();
@@ -456,7 +457,7 @@
                 }
 
                 const data = await response.json();
-                const aiResponse = data.candidates?.[0]?.content?.parts?.[0]?.text || "Sorry, I couldn't process that.";
+const aiResponse = data.text || "Sorry, I couldn't process that.";
 
                 // Remove loading indicator and show AI response
                 chatBox.removeChild(loadingElement);
