--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
     },
     body: JSON.stringify({
         prompt: message,
-        model: "gemini-pro",      // Optional: defaults to "gemini-pro"
+        model: "gemini-2.0-flash",      // Optional: defaults to "gemini-pro"
         temperature: 0.7,         // Optional
         max_tokens: 200           // Optional
     })
