--- a/Login.html
+++ b/Login.html
@@ -303,7 +303,7 @@
                 <ul>
                     <li><a href="index.html" id="home-link" aria-current="page">Home</a></li>
                     <li><a href="about.html" aria-label="About page">About</a></li>
-                    <li><a href="signup.html" aria-label="Sign Up page">Sign Up</a></li>
+                    <li><a href="Login.html" aria-label="Sign Up page">Log in</a></li>
                 </ul>
             </div>
         </div>
